--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <audio src="https://github.com/AzkaKetceh/Salsa/blob/main/inwhite.mp3" id="linkmp3" class="sembunyi"></audio>
+  <audio src="https://github.com/AzkaKetceh/Andini-Hanif/blob/main/lagu%20galau.mp3" id="linkmp3" class="sembunyi"></audio>
 	<div class="overlay">
     <div class="loading-message">Halooo Cil!<br>Tunggu dulu ya..</div>
      <div id="loveIn" class="blocklove">
