--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <audio src="lagu galau.mp3" id="linkmp3" class="sembunyi"></audio>
+  <audio <source src="lagu galau.mp3" type="mpeg">></audio>
 	<div class="overlay">
     <div class="loading-message">Halooo Cil!<br>Tunggu dulu ya..</div>
      <div id="loveIn" class="blocklove">
