--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <audio <source src="lagu galau.mp3" type="mpeg">></audio>
+<audio src="https://github.com/AzkaKetceh/Andini-Hanif/raw/main/musiktiktok.mp3" id="linkmp3" class="sembunyi"></audio>
 	<div class="overlay">
     <div class="loading-message">Halooo Cil!<br>Tunggu dulu ya..</div>
      <div id="loveIn" class="blocklove">
