--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Andini Hanif :3</title>
-  <meta name="description" content="@feelthisray - Script HTML by feeldream.id">
+  <meta name="description" content="@Azka - Andini Hanif Cantik">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <link rel="icon" type="image/svg+xml" href="https://feeldreams.github.io/main-icon.png"> 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
