--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       	<div id="stiker3" class="scale0 stiker">
         <img src="https://feeldreams.github.io/mmm.gif"/>
        </div>
-      	<h1 id="teks3" class="scale0 itim" style="font-size: 17px;">Sebelumnya aku mau bilang banyak banyak terima kasih sama kamu,<br>terima kasih untuk sabarmu yang tak pernah kurang, meski sifat dan sikapku sering membuatmu lelah, <br><br>terima kasih juga karna masih memilih untuk tetap bersamaku,<br>meski diluar sana masih banyak orang orang terbaik yang bisa kamu dapatkan.<br><br>>>>></h1>
+      	<h1 id="teks3" class="scale0 itim" style="font-size: 17px;">Sebelumnya aku mau bilang banyak banyak terima kasih sama kamu,<br>terima kasih untuk sabarmu yang tak pernah kurang, meski sifat dan sikapku sering membuatmu lelah, <br><br>terima kasih juga karna masih memilih untuk tetap bersamaku<br><br>>>>></h1>
       </div>
       
       <div class="swiper-slide">
